# revng

./: html_assembly.py
include/revng/ABI/: Definition.h  DescribeFunctionType.h  FunctionType.h  ModelAlignment.h  Predefined.h  PrimitiveTypeConstraints.h  RegisterOrder.h  RegisterState.h  RegisterStateDeductions.h  ScalarType.h  TypeSpecific.h  Utility.h
include/revng/ADT/: Concepts.h  GenericGraph.h  STLExtras.h  StringTemplateParameter.h  UpcastablePointer.h
include/revng/BasicAnalyses/: AdvancedValueInfo.h  CSVAliasAnalysis.h  GeneratedCodeBasicInfo.h  ShrinkInstructionOperandsPass.h
include/revng/EarlyFunctionAnalysis/: ABIAnalysis.h  AnalyzeRegisterUsage.h  CallEdge.h  ControlFlowGraph.h  FunctionEdge.h  FunctionEdgeType.h  FunctionMetadata.h  FunctionMetadataCache.h  FunctionSummaryOracle.h  IRHelpers.h
include/revng/FunctionCallIdentification/: FunctionCallIdentification.h
include/revng/FunctionIsolation/: IsolationFunctionKind.h
include/revng/Location/: Kind.h  Location.h  Trait.h
include/revng/Model/: ABI.h  Argument.h  Binary.h  CallSitePrototype.h  CommonFunctionMethods.h  CommonTypeMethods.h  DefinedType.h  Filters.h  Function.h  IRHelpers.h  PrimitiveType.h  Processing.h  QualifiedType.h  RawBinaryView.h  Register.h  Type.h  VerifyHelper.h
include/revng/PTML/: Doxygen.h  ModelHelpers.h
include/revng/Pipeline/: AllRegistries.h  ArtifactLocationKind.h  ArtifactLocationRegistry.h  Context.h  Global.h  GlobalsMap.h  Invokable.h  Kind.h  LLVMContainer.h  LLVMGlobalKindBase.h  Loader.h  Location.h  Option.h  Pipe.h  Rank.h  RegisterAnalysis.h  RegisterArtifactLocation.h  RegisterContainerFactory.h  RegisterKind.h  RegisterLLVMPass.h  RegisterPipe.h  Registry.h  Runner.h  Step.h  Target.h
include/revng/PipelineC/: Prototypes.h
include/revng/Pipes/: FunctionStringMap.h  InvalidationHelpers.h  Kinds.h  Locations.h  Ranks.h  TaggedFunctionKind.h  TupleTreeContainer.h
include/revng/RegisterUsageAnalysis/: Liveness.h  ReachingDefinitions.h
include/revng/StackAnalysis/: ABI.h
include/revng/Support/: ArtifactLocation.h  BlockType.h  ErrorContainer.h  ErrorList.h  IRHelpers.h  (+2 more)
lib/: CMakeLists.txt
lib/ABI/: CMakeLists.txt  DefaultFunctionPrototype.cpp  Definition.cpp  DescribeFunctionType.cpp  FunctionType.cpp  ModelAlignment.cpp  Predefined.cpp  RegisterStateDeductions.cpp
lib/EarlyFunctionAnalysis/: AnalyzeRegisterUsage.cpp  CFGAnalyzer.cpp  CMakeLists.txt  CollectFunctionsFromCalleesPass.cpp  CollectFunctionsFromUnusedAddressesPass.cpp  DetectABI.cpp  EFA4.cpp  EarlyFunctionAnalysis.cpp  FunctionMetadata.cpp  FunctionSummaryOracle.cpp  Outliner.cpp
lib/EarlyFunctionAnalysis/ABIAnalyses/: ABIAnalysis.cpp
lib/EarlyFunctionAnalysis/ABIAnalyses/MFIGraphs/: ABIAnalysis.template
lib/FunctionIsolation/: CMakeLists.txt  DropRoot.cpp  EnforceABI.cpp  IsolateFunctions.cpp  IsolatedFunctionKind.cpp  PromoteCSVs.cpp
lib/Lift/: AdvancedValueInfoPass.h  CPUStateAccessAnalysisPass.cpp  CodeGenerator.cpp  DropHelperCallsPass.h  ExternalJumpsHandler.h  InstructionTranslator.h  JumpTargetManager.cpp  JumpTargetManager.h  RootAnalyzer.cpp  VariableManager.cpp  VariableManager.h
lib/Location/: CMakeLists.txt  Empty.cpp
lib/Model/: Binary.cpp  CMakeLists.txt  CommonTypeMethods.cpp  Processing.cpp  Type.cpp  TypeSystemPrinter.cpp  Verification.cpp
lib/Model/Importer/DebugInfo/: CMakeLists.txt  DwarfImporter.cpp  PDBImporter.cpp
lib/PTML/: Doxygen.cpp
lib/Pipeline/: CMakeLists.txt  RegisterArtifactLocation.cpp  Registry.cpp  Runner.cpp  Step.cpp  Target.cpp
lib/PipelineC/: PipelineC.cpp
lib/Pipes/: ApplyDiffAnalysis.cpp  CMakeLists.txt  FileContainer.cpp  FunctionStringMap.cpp  PipelineManager.cpp  Pipes.cpp  TaggedFunctionKind.cpp
lib/Pipes/Yield/: Assembly.cpp  AssemblyPipes.cpp  CFGPipes.cpp  CallGraphPipes.cpp
lib/StackAnalysis/: ABI.cpp
lib/Support/: CommandLine.cpp  LDDTree.cpp  PathList.cpp  ProgramCounterHandler.cpp  Progress.cpp
lib/TypeShrinking/: BitLiveness.cpp  TypeShrinking.cpp
lib/ValueMaterializer/: AdvancedValueInfo.cpp
lib/Yield/: CMakeLists.txt  CallGraph.cpp  CrossRelations.cpp  PTML.cpp
share/revng/: clang-format-style-file
tests/: Tests.cmake
tests/abi/: ABITests.cmake  CMakeLists.txt  test.sh  x86.yml
tests/analysis/: AnalysisTests.cmake
tests/pipeline/: BadBehaviorLibrary.cpp  CMakeLists.txt  StringContainerLibrary.cpp
tests/runtime/: RuntimeTests.cmake
tests/unit/: ABI.cpp  CMakeLists.txt  DepthFirstVisit.h  FilteredGraphTraits.cpp  GenericGraph.cpp  Location.cpp  Model.cpp  ModelType.cpp  Pipeline.cpp  RegisterStateDeductions.cpp  RegisterUsageAnalysis.cpp  UnitTests.cmake
tools/: CMakeLists.txt
tools/pipeline/: Main.cpp
tools/revng-abi-convert/: CMakeLists.txt  Convert.cpp  Convert.h  Main.cpp
tools/revng-compare-models/: CMakeLists.txt  Main.cpp
tools/revng-lift/: CodeGenerator.cpp
tools/yield/: AssemblyHTML.cpp  AssemblyPlain.cpp
(+260 files in other folders)
