#
# This file is distributed under the MIT License. See LICENSE.md for details.
#

revng_add_library_internal(
  revngPipes
  SHARED
  AddPrimitiveTypesPipe.cpp
  AllFunctions.cpp
  CompileModulePipe.cpp
  FileContainer.cpp
  FunctionStringMap.cpp
  ImportBinaryPipe.cpp
  LiftPipe.cpp
  LinkSupportPipe.cpp
  PipelineManager.cpp
  Pipes.cpp
  RootKind.cpp
  TaggedFunctionKind.cpp
  Yield/AssemblyPipes.cpp
  Yield/CFGPipes.cpp)

llvm_map_components_to_libnames(
  LLVM_LIBRARIES
  AggressiveInstCombine
  Analysis
  AsmParser
  BitWriter
  CodeGen
  Core
  Coroutines
  Extensions
  GlobalISel
  IPO
  InstCombine
  Instrumentation
  MC
  Passes
  Remarks
  ScalarOpts
  Support
  Target
  TransformUtils
  Vectorize
  X86AsmParser
  X86CodeGen
  X86Desc
  X86Info)

target_link_libraries(
  revngPipes
  revngEarlyFunctionAnalysis
  revngLift
  revngModelImporterBinary
  revngModelPasses
  revngPipeline
  revngSupport
  revngYield
  revngEarlyFunctionAnalysis
  ${LLVM_LIBRARIES})

set(INTERNAL_ASSEMBLY_HEADERS
    "${CMAKE_SOURCE_DIR}/include/revng/Pipes/Location")
target_tuple_tree_generator(
  revngPipes
  INSTALL
  HEADER_DIRECTORY
  "Pipes/Location"
  NAMESPACE
  "revng::pipes::location::detail"
  SCHEMA_PATH
  "${CMAKE_BINARY_DIR}/location-schema.yml"
  SEPARATE_STRING_TYPES
  "MetaAddress"
  HEADERS
  "${INTERNAL_ASSEMBLY_HEADERS}/BasicBlock.h"
  "${INTERNAL_ASSEMBLY_HEADERS}/Function.h"
  "${INTERNAL_ASSEMBLY_HEADERS}/Instruction.h"
  "${INTERNAL_ASSEMBLY_HEADERS}/Type.h"
  "${INTERNAL_ASSEMBLY_HEADERS}/TypeField.h")
